feat: add OpenJML on entity, DAO and service